Fix spacing on mobile.

--- a/static/sass/custom/_search-results.scss
+++ b/static/sass/custom/_search-results.scss
@@ -29,6 +29,7 @@
 
   .list-block__filter {
     margin-right: 1rem;
+
     @media (min-width: $breakpoint-small) {
       display: flex;
     }
@@ -55,6 +56,10 @@
         padding: 0.5rem 0;
         top: calc(100% + 1rem);
 
+        @media (max-width: $breakpoint-x-small) {
+          min-width: 0;
+        }
+
         &:before {
           border: {
             bottom-width: $tooltip-size + 2;
@@ -72,7 +77,7 @@
         }
 
         .p-list__item {
-          padding: 0.5rem 1rem;
+          padding: 0.5rem 1rem 0.25rem 1rem;
 
           &:hover,
           &--active {
